--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,8 @@
     <color name="background_nav_menu_light">#FFFFFFFF</color>
     <color name="background_nav_menu_dark">#1A1B22</color>
     <color name="color_shadow_nav_menu">#737373</color>
+    <color name="color_line_bottom_sheet_light">#E6E8EB</color>
+    <color name="color_line_bottom_sheet_dark">#FFFFFF</color>
+    <color name="bg_bottom_sheet_light">#FFFFFF</color>
+    <color name="bg_bottom_sheet_dark">#1A1B22</color>
 </resources>
