--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,8 @@
         <item name="colorTabNavMenu">@color/tab_nav_menu_light</item>
         <item name="backgroundNavMenu">@color/background_nav_menu_light</item>
         <item name="borderPlaylistAdd">@color/ap_information_title</item>
+        <item name="colorLineBottomSheet">@color/color_line_bottom_sheet_light</item>
+        <item name="bgBottomSheet">@color/bg_bottom_sheet_light</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
