--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -73,10 +73,15 @@
     <dimen name="padding_bottom_edit_text_playlist_add">19dp</dimen>
     <dimen name="padding_bottom_playlist_add">32dp</dimen>
     <dimen name="font_size_text_playlist">12sp</dimen>
+    <dimen name="font_size_title_playlist">19sp</dimen>
     <dimen name="padding_vertical_bottom_sheet">13dp</dimen>
     <dimen name="height_bottom_sheet">505dp</dimen>
     <dimen name="width_line_bottom_sheet">50dp</dimen>
     <dimen name="height_line_bottom_sheet">4dp</dimen>
     <dimen name="margin_top_line_bottom_sheet">8dp</dimen>
+    <dimen name="margin_top_title_add_to_playlist">12dp</dimen>
+    <dimen name="padding_top_line_bottom_sheet">18dp</dimen>
+    <dimen name="padding_bottom_line_bottom_sheet">12dp</dimen>
+    <dimen name="padding_bottom_add_to_playlist_btn">24dp</dimen>
 
 </resources>
