--- a/app/src/main/res/layout/item_playlist_bs.xml
+++ b/app/src/main/res/layout/item_playlist_bs.xml
@@ -9,40 +9,45 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/padding_vertical_item_bottom_sheet">
 
         <ImageView
             android:id="@+id/playlist_image"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="@dimen/size_img_bottom_sheet"
+            android:layout_height="@dimen/size_img_bottom_sheet"
             android:scaleType="centerCrop"
             android:contentDescription="@string/content_description_playlist"
-            android:background="@drawable/border_playlist"
+            android:background="@drawable/border_playlist_small"
             android:clipToOutline="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/center_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
+
         <TextView
             android:id="@+id/name_playlist"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/size_null"
             android:layout_height="wrap_content"
-            style="@style/playlist_text"
-            android:layout_marginStart="8dp"
+            style="@style/playlist_name_in_bs"
             app:layout_constraintStart_toEndOf="@id/playlist_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/playlist_image"
-            app:layout_constraintBottom_toBottomOf="@id/playlist_image" />
+            app:layout_constraintBottom_toTopOf="@id/center_guideline" />
 
         <TextView
             android:id="@+id/count_track"
             android:layout_width="@dimen/size_null"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/name_playlist"
+            style="@style/playlist_count_track_in_bs"
             app:layout_constraintStart_toEndOf="@id/playlist_image"
             app:layout_constraintEnd_toEndOf="parent"
-            style="@style/playlist_text"/>
+            app:layout_constraintTop_toBottomOf="@id/center_guideline" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
