fix bug in dark theme

--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/size_null"
     app:cardElevation="@dimen/size_null"
-    app:cardBackgroundColor="@android:color/white">
+    app:cardBackgroundColor="?attr/playlistBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
