--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -27,6 +27,8 @@
         <item name="colorLineBottomSheet">@color/color_line_bottom_sheet_dark</item>
         <item name="bgBottomSheet">@color/bg_bottom_sheet_dark</item>
         <item name="colorNameInBS">@color/color_name_in_bs_dark</item>
+        <item name="playlistBackground">@color/color_playlist_background_dark</item>
+        <item name="addPlaylistTextEditBorder">@color/white</item>
     </style>
 
     <style name="Theme.PlaylistMaker.Main" parent="Base.Theme.PlaylistMaker" />
