--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="main_background">#3772E7</color>
     <color name="blackish_blue">#1A1B22</color>
     <color name="icon_color_light">#AEAFB4</color>
+    <color name="icon_color_dark">#FFFFFF</color>
     <color name="btn_click">#0D2A6A</color>
     <color name="thumb_color_light">@color/icon_color_light</color>
     <color name="thumb_color_dark">#3772E7</color>
@@ -33,4 +34,6 @@
     <color name="bg_bottom_sheet_dark">#1A1B22</color>
     <color name="color_name_in_bs_light">#000000</color>
     <color name="color_name_in_bs_dark">#FFFFFF</color>
+    <color name="color_playlist_background_light">#FFFFFF</color>
+    <color name="color_playlist_background_dark">#1A1B22</color>
 </resources>
