--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,8 @@
         <item name="colorLineBottomSheet">@color/color_line_bottom_sheet_light</item>
         <item name="bgBottomSheet">@color/bg_bottom_sheet_light</item>
         <item name="colorNameInBS">@color/color_name_in_bs_light</item>
+        <item name="playlistBackground">@color/color_playlist_background_light</item>
+        <item name="addPlaylistTextEditBorder">@color/icon_color_light</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
