--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,6 +30,9 @@
         <action
             android:id="@+id/action_libraryFragment_to_playlistAddFragment"
             app:destination="@id/playlistAddFragment" />
+        <action
+            android:id="@+id/action_libraryFragment_to_playlistDetailsFragment"
+            app:destination="@id/playlistDetailsFragment" />
     </fragment>
 
     <action
@@ -48,4 +51,9 @@
         android:name="com.practicum.playlistmaker.library.ui.PlaylistAddFragment"
         android:label="fragment_playlist_add"
         tools:layout="@layout/fragment_playlist_add" />
+    <fragment
+        android:id="@+id/playlistDetailsFragment"
+        android:name="com.practicum.playlistmaker.library.ui.PlaylistDetailsFragment"
+        android:label="fragment_playlist_details"
+        tools:layout="@layout/fragment_playlist_details" />
 </navigation>
