add fragment from playlist details

--- a/app/src/main/res/layout/fragment_playlist_add.xml
+++ b/app/src/main/res/layout/fragment_playlist_add.xml
@@ -43,7 +43,7 @@ tools:context=".library.ui.PlaylistAddFragment">
         android:id="@+id/header_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top_image_playlist_add"
+        android:layout_marginTop="@dimen/margin_top_arrow"
         app:layout_constraintStart_toEndOf="@id/left_guideline"
         app:layout_constraintEnd_toStartOf="@id/right_guideline"
         app:layout_constraintTop_toTopOf="parent">
