--- a/app/src/main/res/layout/fragment_playlist_details.xml
+++ b/app/src/main/res/layout/fragment_playlist_details.xml
@@ -1,6 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_playlist_details_background"
+    tools:context=".library.ui.PlaylistAddFragment">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/left_guide_content_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/margin_guide_begin_audio_player"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/right_content_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/margin_guide_begin_audio_player"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/top_guide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="@dimen/main_padding_vertical"/>
+
+    <ImageView
+        android:id="@+id/playlist_image"
+        android:layout_width="@dimen/size_null"
+        android:layout_height="@dimen/size_null"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/content_description_playlist"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/placeholder"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_top_arrow"
+        app:layout_constraintStart_toEndOf="@id/left_guide_content_line"
+        app:layout_constraintEnd_toStartOf="@id/right_content_guideline"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/arrow_back"
+            style="@style/imageInTitleActivity"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/left_guide_content_line"
+        app:layout_constraintTop_toBottomOf="@id/playlist_image"
+        style="@style/font_bold_playlist_detail"
+        android:text="Best soung"
+        />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+        app:layout_constraintTop_toBottomOf="@+id/name"
+        android:layout_marginTop="@dimen/margin_top_text_playlist_details"
+        style="@style/font_playlist_detail"
+        android:text="2022"
+        />
+
+    <LinearLayout
+        android:id="@+id/info_Layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/margin_top_text_playlist_details"
+        app:layout_constraintStart_toStartOf="@id/left_guide_content_line"
+        app:layout_constraintTop_toBottomOf="@id/description">
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+            app:layout_constraintTop_toBottomOf="@+id/description"
+            style="@style/font_playlist_detail"
+            android:text="300 минут"
+            />
+
+        <View
+            android:layout_width="@dimen/size_point"
+            android:layout_height="@dimen/size_point"
+            android:layout_marginHorizontal="@dimen/margin_horizontal_point"
+            android:background="@color/color_text_playlist_details" />
+
+        <TextView
+            android:id="@+id/count_track"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/time"
+            app:layout_constraintTop_toBottomOf="@+id/description"
+            style="@style/font_playlist_detail"
+            android:text="98 треков"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/margin_top_text_playlist_details"
+        app:layout_constraintStart_toStartOf="@id/left_guide_content_line"
+        app:layout_constraintTop_toBottomOf="@id/info_Layout">
+
+
+        <ImageView
+            android:id="@+id/playlist_icon_shared"
+            android:layout_width="@dimen/size_icon_playlist"
+            android:layout_height="@dimen/size_icon_playlist"
+            app:layout_constraintStart_toStartOf="@+id/left_guide_content_line"
+            app:layout_constraintTop_toBottomOf="@+id/count_track"
+            android:layout_marginEnd="@dimen/margin_right_icon_playlist_details"
+            android:src="@drawable/playlist_icon_shared"/>
+
+
+        <ImageView
+            android:id="@+id/playlist_icon_menu"
+            android:layout_width="@dimen/size_icon_playlist"
+            android:layout_height="@dimen/size_icon_playlist"
+            app:layout_constraintStart_toEndOf="@+id/playlist_icon_shared"
+            app:layout_constraintTop_toBottomOf="@+id/count_track"
+            android:src="@drawable/playlist_icon_menu"/>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
