--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,4 +37,6 @@
     <color name="color_name_in_bs_dark">#FFFFFF</color>
     <color name="color_playlist_background_light">#FFFFFF</color>
     <color name="color_playlist_background_dark">#1A1B22</color>
+    <color name="color_playlist_details_background">#E6E8EB</color>
+    <color name="color_text_playlist_details">#1A1B22</color>
 </resources>
