--- a/app/src/main/res/layout/fragment_playlist_details.xml
+++ b/app/src/main/res/layout/fragment_playlist_details.xml
@@ -179,5 +179,93 @@
 
     </LinearLayout>
 
+    <View android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#99000000"
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:id="@+id/menu_bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/bg_bottom_sheet"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        app:behavior_hideable="true"
+        android:paddingBottom="107dp"
+        >
+
+        <View
+            android:layout_width="@dimen/width_line_bottom_sheet"
+            android:layout_height="@dimen/height_line_bottom_sheet"
+            android:background="?attr/colorLineBottomSheet"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_top_line_bottom_sheet" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="@dimen/main_padding_vertical">
+
+            <ImageView
+                android:id="@+id/image_playlist_sm"
+                android:layout_width="@dimen/artwork_size"
+                android:layout_height="@dimen/artwork_size"
+                android:layout_marginEnd="@dimen/artwork_margin"
+                android:contentDescription="@string/content_description_playlist" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/name_playlist_sm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/titleTrackStyle"
+                    android:maxLines="1"
+                    android:ellipsize="end"/>
+
+                <TextView
+                    android:id="@+id/count_track_sm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/infoTrackStyle"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/sharing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Поделиться"
+            style="@style/font_playlist_detail"
+            android:paddingVertical="16dp"/>
+
+        <TextView
+            android:id="@+id/edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Редактировать информацию"
+            style="@style/font_playlist_detail"
+            android:paddingVertical="16dp"/>
+
+        <TextView
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Удалить плейлист"
+            style="@style/font_playlist_detail"
+            android:paddingVertical="16dp"/>
+
+    </LinearLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
